feat: add member sensitive permissions
